--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
       <h2>About</h2>
 
       <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+    </div>
   </section>
   <section class="middleabout">
     <div class="contentinfo">
@@ -60,7 +61,7 @@
 
         <button>Learn More</button>
       </div>
-      <div class="information bot">
+      <div class="information">
         <img src="img/about-office.png" alt="strategy">
         
         <h3>Places We Work<br></h3>
@@ -69,7 +70,7 @@
 
         <button>Learn More</button>
       </div>
-      <div class="information bot">
+      <div class="information">
       <img src="img/about-meeting.png" alt="strategy">
       
       <h3>Collaboration<br></h3>
